# sampleSQLite

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: CMakeLists.txt  algo_counters.cpp  algo_counters.h  app_tableModel.cpp  app_tableModel.h  app_widgetMain.cpp  app_widgetMain.h  main.cpp  model_counters.cpp  model_counters.h  model_dataBase.cpp  model_dataBase.h  thread_manager.cpp  thread_manager.h
test_files/: testSqlBase.sqlite3
